# ZP_automation_generation

./: (ОБРАЗЕЦ)Табель_учета_2026.xlsx  README.md  create_table.py  pyproject.toml
